--- a/index.html
+++ b/index.html
@@ -316,39 +316,6 @@
         </div>
       </article>
 
-      <!-- SOLD 예시: Sign of Corn -->
-      <article class="card" data-status="sold">
-        <span class="badge-sold">SOLD OUT ⚡</span>
-        <a href="https://x.com/gxrxxxng/status/1981310401754386533" target="_blank" rel="noopener">
-          <img class="thumb" src="assets/images/corn-thumb.png?v=4" alt="Sign of Corn pixel art" />
-          <span class="badge">▶ Watch on X</span>
-        </a>
-        <div class="meta">
-          <h3 class="title">Sign of Corn 🌽</h3>
-          <p class="desc">시드사이너 화면에 깜빡이는 옥수수, 'CORN GANG'의 신호.</p>
-          <span class="tiny"><span class="dot"></span>2025-10-23</span>
-        </div>
-      </article>
-
-      <!-- EVENT 예시: Mini Conference -->
-      <article class="card" data-status="event">
-        <span class="badge-event">EVENT ✦</span>
-        <a href="https://x.com/gxrxxxng/status/1989668977505964369?s=46"
-           target="_blank" rel="noopener"
-           aria-label="Mini Conference Exhibition — X에서 보기"
-           style="position:relative; display:block;">
-          <img class="thumb" src="assets/images/251115-miniconference.png?v=1"
-               alt="Mini conference (X에서 보기)" />
-          <span class="badge">▶ Watch on X</span>
-        </a>
-
-        <div class="meta">
-          <h3 class="title">Mini Conference 🌕</h3>
-          <p class="desc">비트코인을 비추는 날.</p>
-          <span class="tiny"><span class="dot"></span>2025-11-15</span>
-        </div>
-      </article>
-
       <!-- 카드: orange cat (기본 available로 자동 처리됨) -->
       <article class="card">
         <a href="https://x.com/gxrxxxng/status/1994342411296797152?s=46"
@@ -441,6 +408,25 @@
           <div class="row">
             <span class="tiny"><span class="dot"></span>2025-11-16</span>
           </div>
+        </div>
+      </article>
+
+            <!-- EVENT 예시: Mini Conference -->
+      <article class="card" data-status="event">
+        <span class="badge-event">EVENT ✦</span>
+        <a href="https://x.com/gxrxxxng/status/1989668977505964369?s=46"
+           target="_blank" rel="noopener"
+           aria-label="Mini Conference Exhibition — X에서 보기"
+           style="position:relative; display:block;">
+          <img class="thumb" src="assets/images/251115-miniconference.png?v=1"
+               alt="Mini conference (X에서 보기)" />
+          <span class="badge">▶ Watch on X</span>
+        </a>
+
+        <div class="meta">
+          <h3 class="title">Mini Conference 🌕</h3>
+          <p class="desc">비트코인을 비추는 날.</p>
+          <span class="tiny"><span class="dot"></span>2025-11-15</span>
         </div>
       </article>
 
@@ -728,28 +714,51 @@
       </article>
 
       <!-- 카드 2: At the Bitcoin Center (NEW 배지 제거) -->
-      <article class="card">
-        <a href="https://x.com/gxrxxxng/status/1982756745719263315?s=46" target="_blank" rel="noopener">
-          <img class="thumb" src="assets/images/251027bitcoincenter-thumb.png" alt="At the Bitcoin Center pixel art" />
-          <span class="badge">▶ Watch on X</span>
-        </a>
-        <div class="meta">
-          <h3 class="title">At the Bitcoin Center 🧭</h3>
-          <p class="desc">커피와 쿠키, 오렌지 알약을 먹는 곳.</p>
-          <span class="tiny"><span class="dot"></span>2025-10-27</span>
-        </div>
-      </article>
+     <article class="card">
+  <a href="https://x.com/gxrxxxng/status/1982756745719263315?s=46"
+     target="_blank" rel="noopener"
+     aria-label="At the Bitcoin Center — X에서 보기"
+     style="position:relative; display:block;">
+    <img class="thumb" src="assets/images/251027bitcoincenter-thumb.png"
+         alt="At the Bitcoin Center pixel art" />
+    <span class="badge">▶ Watch on X</span>
+  </a>
 
-      <!-- 카드 3: Pop your corn -->
-      <article class="card">
-        <a href="https://x.com/gxrxxxng/status/1982032167409729581?s=46" target="_blank" rel="noopener">
-          <img class="thumb" src="assets/images/251025 popcorn-thumb.png" alt="Pop your corn pixel art" />
+  <div class="meta">
+    <h3 class="title">At the Bitcoin Center 🧭</h3>
+    <p class="desc">커피와 쿠키, 오렌지 알약을 먹는 곳.</p>
+    <span class="tiny"><span class="dot"></span>2025-10-27</span>
+  </div>
+</article>
+
+      <!-- 카드 3: Pop your corn --><article class="card">
+  <a href="https://x.com/gxrxxxng/status/1982032167409729581?s=46"
+     target="_blank" rel="noopener"
+     aria-label="Pop your corn — X에서 보기"
+     style="position:relative; display:block;">
+    <img class="thumb" src="assets/images/251025 popcorn-thumb.png"
+         alt="Pop your corn pixel art" />
+    <span class="badge">▶ Watch on X</span>
+  </a>
+
+  <div class="meta">
+    <h3 class="title">Pop your corn ⚡</h3>
+    <p class="desc">옥수수가 번개를 맞아 터지는 순간.</p>
+    <span class="tiny"><span class="dot"></span>2025-10-25</span>
+  </div>
+</article>
+
+            <!-- SOLD 예시: Sign of Corn -->
+      <article class="card" data-status="sold">
+        <span class="badge-sold">SOLD OUT ⚡</span>
+        <a href="https://x.com/gxrxxxng/status/1981310401754386533" target="_blank" rel="noopener">
+          <img class="thumb" src="assets/images/corn-thumb.png?v=4" alt="Sign of Corn pixel art" />
           <span class="badge">▶ Watch on X</span>
         </a>
         <div class="meta">
-          <h3 class="title">Pop your corn ⚡</h3>
-          <p class="desc">옥수수가 번개를 맞아 터지는 순간.</p>
-          <span class="tiny"><span class="dot"></span>2025-10-25</span>
+          <h3 class="title">Sign of Corn 🌽</h3>
+          <p class="desc">시드사이너 화면에 깜빡이는 옥수수, 'CORN GANG'의 신호.</p>
+          <span class="tiny"><span class="dot"></span>2025-10-23</span>
         </div>
       </article>
 
