--- a/index.html
+++ b/index.html
@@ -748,19 +748,25 @@
   </div>
 </article>
 
-            <!-- SOLD 예시: Sign of Corn -->
-      <article class="card" data-status="sold">
-        <span class="badge-sold">SOLD OUT ⚡</span>
-        <a href="https://x.com/gxrxxxng/status/1981310401754386533" target="_blank" rel="noopener">
-          <img class="thumb" src="assets/images/corn-thumb.png?v=4" alt="Sign of Corn pixel art" />
-          <span class="badge">▶ Watch on X</span>
-        </a>
-        <div class="meta">
-          <h3 class="title">Sign of Corn 🌽</h3>
-          <p class="desc">시드사이너 화면에 깜빡이는 옥수수, 'CORN GANG'의 신호.</p>
-          <span class="tiny"><span class="dot"></span>2025-10-23</span>
-        </div>
-      </article>
+<!-- SOLD 예시: Sign of Corn -->
+<article class="card" data-status="sold">
+  <span class="badge-sold">SOLD OUT ⚡</span>
+
+  <a href="https://x.com/gxrxxxng/status/1981310401754386533"
+     target="_blank" rel="noopener"
+     style="position:relative; display:block;">
+    <img class="thumb" src="assets/images/corn-thumb.png?v=4"
+         alt="Sign of Corn pixel art" />
+    <span class="badge">▶ Watch on X</span>
+  </a>
+
+  <div class="meta">
+    <h3 class="title">Sign of Corn 🌽</h3>
+    <p class="desc">시드사이너 화면에 깜빡이는 옥수수, 'CORN GANG'의 신호.</p>
+    <span class="tiny"><span class="dot"></span>2025-10-23</span>
+  </div>
+</article>
+
 
       
     </section>
