--- a/index.html
+++ b/index.html
@@ -20,18 +20,13 @@
     }
 
     :root{
-  --bg-0:#0f0c1a; --bg-1:#1a1530; --text:#e9e6ff; --muted:#bfb9e6;
-  --accent:#ffcc57; --card:#17132a; --ring:rgba(255,255,255,.12);
-  --shadow:0 10px 30px rgba(0,0,0,.35); --radius:18px; --grid-gap:16px; --max:1100px;
-  --danger:#ff6b6b;
+      --bg-0:#0f0c1a; --bg-1:#1a1530; --text:#e9e6ff; --muted:#bfb9e6;
+      --accent:#ffcc57; --card:#17132a; --ring:rgba(255,255,255,.12);
+      --shadow:0 10px 30px rgba(0,0,0,.35); --radius:18px; --grid-gap:16px; --max:1100px;
+      --danger:#ff6b6b;
 
-  --moon-yellow:#f2e9b8; /* 🌙 달빛 링크 색 */
-}
-a.inline { color: var(--moon-yellow); }
-a.inline:hover {
-  color: #fff2c2;
-  text-decoration: underline;
-}
+      --moon-yellow:#f2e9b8; /* 🌙 달빛 링크 색 */
+    }
 
     *{box-sizing:border-box}
     html,body{height:100%}
@@ -187,7 +182,7 @@ a.inline:hover {
       background:linear-gradient(180deg,#2b2244,#1b142c);
       color:#ffcc57; border:1px solid rgba(255,214,106,.4);
       text-transform:uppercase; letter-spacing:.6px;
-      box-shadow:inset 0 0 6px rgba(255,204,87,.2),0 3px 10px rgba(0,0,rescale(0,0,0,.35);
+      box-shadow: inset 0 0 6px rgba(255,204,87,.2), 0 3px 10px rgba(0,0,0,.35);
     }
     .badge-event{
       left:10px; top:10px;
@@ -248,8 +243,18 @@ a.inline:hover {
       border:1px solid rgba(255,255,255,.25);
     }
 
-    a.inline{color:#fff; text-decoration:none; border-bottom:1px dotted rgba(255,255,255,.35)}
-    a.inline:hover{border-bottom-color:rgba(255,255,255,.75)}
+    /* ✅ 달빛 링크 (class="inline"에만 적용) */
+    a.inline{
+      color: var(--moon-yellow);
+      text-decoration: none;
+      border-bottom: 1px dotted rgba(242,233,184,.45);
+    }
+    a.inline:hover{
+      color:#fff2c2;
+      border-bottom-color: rgba(255,242,194,.8);
+      text-decoration: none;
+    }
+
     .kbd{padding:2px 6px; border:1px solid rgba(255,255,255,.2); border-radius:8px; background:rgba(0,0,0,.2)}
 
     /* ✅ fixed header 때문에 메인 상단이 가려지지 않게 */
@@ -756,32 +761,31 @@ a.inline:hover {
       </article>
     </section>
 
-<!-- ✅ EXHIBITIONS -->
-<section id="exhibitions" class="section">
-  <h2>Exhibitions</h2>
-  <p>작은 기록들이 모여, 다음 작업의 지도가 됩니다.</p>
+    <!-- ✅ EXHIBITIONS -->
+    <section id="exhibitions" class="section">
+      <h2>Exhibitions</h2>
+      <p>작은 기록들이 모여, 다음 작업의 지도가 됩니다.</p>
 
-  <div class="panel">
-    <ul class="list">
-      <li>
-        <strong style="color:#fff">2025-11-29~30</strong> · Bitcoin Mini Conference Exhibition
-        <span class="tiny" style="display:block">Pixel artworks on display.</span>
+      <div class="panel">
+        <ul class="list">
+          <li>
+            <strong style="color:#fff">2025-11-29~30</strong> · Bitcoin Mini Conference Exhibition
+            <span class="tiny" style="display:block">Pixel artworks on display.</span>
 
-        <div class="tiny" style="margin-top:8px; display:flex; gap:10px; flex-wrap:wrap;">
-          <a href="https://x.com/gxrxxxng/status/1994633142674886870?s=46" target="_blank" rel="noopener noreferrer">
-            Day 1 · Watch on X
-          </a>
-          <a href="https://x.com/gxrxxxng/status/1995020996118810765?s=46" target="_blank" rel="noopener noreferrer">
-            Day 2 · Watch on X
-          </a>
-        </div>
-      </li>
-    </ul>
-  </div>
-</section>
+            <div class="tiny" style="margin-top:8px; display:flex; gap:10px; flex-wrap:wrap;">
+              <a class="inline" href="https://x.com/gxrxxxng/status/1994633142674886870?s=46" target="_blank" rel="noopener noreferrer">
+                Day 1 · Watch on X
+              </a>
+              <a class="inline" href="https://x.com/gxrxxxng/status/1995020996118810765?s=46" target="_blank" rel="noopener noreferrer">
+                Day 2 · Watch on X
+              </a>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </section>
 
-
-    <!-- ✅ SHOP (아래로 내림) -->
+    <!-- ✅ SHOP -->
     <section id="shop" class="section">
       <h2>Shop</h2>
       <p>선별된 작품은 사토샵에서 구매하실 수 있습니다.</p>
