--- a/index.html
+++ b/index.html
@@ -307,9 +307,7 @@
       <div class="panel">
         <p style="margin:0; color:var(--muted)">
           이곳은 X에 공개된 픽셀아트들을 모아 소개하는 작은 갤러리입니다.<br/>
-          각 장면의 기록과 이야기는 ‘Watch on X’를 통해 확인하실 수 있습니다.<br/><br/>
           작품의 기록은 전시와 경매, 온라인 샵을 통해 이어집니다.<br/>
-          방문해 주셔서 감사합니다.
         </p>
       </div>
     </section>
@@ -317,7 +315,7 @@
     <!-- ✅ GALLERY -->
     <section class="section" style="padding-top:6px">
       <h2 id="gallery">Gallery</h2>
-      <p>각 장면을 클릭하면 X에서 기록을 확인하실 수 있습니다.</p>
+      <p>시간과 상태에 따라 기록이 정리되어 있습니다.</p>
 
       <div class="toolbar" role="group" aria-label="Gallery filters">
         <button class="btn btn-on" data-filter="all">All</button>
