--- a/index.html
+++ b/index.html
@@ -325,10 +325,30 @@
       </div>
     </section>
 
-    <section class="grid" aria-label="Artwork grid">
+        <section class="grid" aria-label="Artwork grid">
       <!-- NEW + available -->
       <article class="card" data-status="available">
         <span class="badge-new">NEW ✦</span>
+        <a href="https://x.com/gxrxxxng/status/2002690345772171476?s=46"
+           target="_blank" rel="noopener"
+           aria-label="Fiat scream — X에서 보기"
+           style="position:relative; display:block;">
+          <img class="thumb" src="assets/images/251221-fiatscream-thumb.png?v=1"
+               alt="Fiat scream (X에서 보기)" />
+          <span class="badge">▶ Watch on X</span>
+        </a>
+        <div class="meta">
+          <h3 class="title">Fiat scream 🙀</h3>
+          <p class="desc">달콤해야 할 가치는 가장 먼저 녹아내린다.</p>
+          <div class="row">
+            <span class="tiny"><span class="dot"></span>2025-12-21</span>
+          </div>
+        </div>
+      </article>
+
+    <section class="grid" aria-label="Artwork grid">
+      <!-- NEW + available -->
+      <article class="card" data-status="available">
         <a href="https://x.com/gxrxxxng/status/1997664170062283246?s=46"
            target="_blank" rel="noopener"
            aria-label="Silence Outside, Signal Inside — X에서 보기"
