--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
              target="_blank" rel="noopener"
              aria-label="Fiat scream — X에서 보기"
              style="position:relative; display:block;">
-            <img class="thumb" src="assets/images/251221-fiatscream-thumb.png?v=1"
+            <img class="thumb" src="assets/images/251221-fiatscream-thumb.jpg?v=1"
                  alt="Fiat scream (X에서 보기)" />
             <span class="badge">▶ Watch on X</span>
           </a>
