--- a/index.html
+++ b/index.html
@@ -327,8 +327,27 @@
       <!-- ✅ grid는 딱 1번만 -->
       <section class="grid" aria-label="Artwork grid">
         <!-- NEW + available -->
-        <article class="card" data-status="available">
+        
+         <article class="card" data-status="available">
           <span class="badge-new">NEW ✦</span>
+          <a href="https://x.com/gxrxxxng/status/2003830155694002614?s=46"
+             target="_blank" rel="noopener"
+             aria-label="Santa miner — X에서 보기"
+             style="position:relative; display:block;">
+            <img class="thumb" src="assets/images/251224-merrybmas-thumb.png?v=1"
+                 alt="Santa miner (X에서 보기)" />
+            <span class="badge">▶ Watch on X</span>
+          </a>
+          <div class="meta">
+            <h3 class="title">Merry ₿-Mas Factory 🎄</h3>
+            <p class="desc">비트코인을 원하는 사람이 많았던, 어느 크리스마스.</p>
+            <div class="row">
+              <span class="tiny"><span class="dot"></span>2025-12-24</span>
+            </div>
+          </div>
+        </article>
+
+        <article class="card" data-status="available">
           <a href="https://x.com/gxrxxxng/status/2002690345772171476?s=46"
              target="_blank" rel="noopener"
              aria-label="Fiat scream — X에서 보기"
